styles.css
/**/
*{
    font-family: 'Lato', sans-serif;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

h1, h2, h3, h4, h5, h6, span {
    color: #242424;
    text-align: center;
    line-height: 1.25;
}

h1
{
    font-size: 36px;
}

p {
    line-height: 1.5;
    font-size: 16px;
}

li
{
    list-style-type: none;
}

.flex 
{
    display: flex;
}
.flex-1
{
    flex: 1;
}

.row
{
    width: 100%;
    max-width:800px;
    margin: 0 auto;
}

.text-purple
{
   color: #6030b1;
}

/* navigation bar */

nav{
    height: 100px;
    width: 100%;
    max-width: 1000px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav_link_list
{
    display: flex;
}

.nav_link--anchor
{
    margin: 0 12px;
    color: #242424;
    text-decoration: none;
    font-weight: 700;
}

.nav_link--anchor-primary
{
    background-color: #6030b1;
    padding: 8px 20px;
    border-radius: 50px;
    color: white;
    transition: all 300ms ease;
}

.nav_link--anchor-primary:hover
{
    background-color: #5d3eff;
    
}

.personal_logo
{
    font-size: 24px;
    color: #6030b1;
    margin: 0 12px;
    font-weight: bold;
}

/* ABOUT ME */

#about-me
{
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}

.about-me_info--container
{
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    max-width: 600px;
    margin: 0 auto;
    text-align: center;
}

.about-me__picture--mask
{
    width: 100px;
    height: 100px;
    border-radius: 50%;
    overflow: hidden;
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
    margin-bottom: 28px;
}

.about-me__picture
{
    width: 100%;

    transform: scale(1.5);
    padding-top: 8px;
}

.about-me__info--title
{
    margin-bottom: 16px;
}

.about-me__info--para
{
    font-size:20px;
    margin-bottom: 20px;
}

.about-me__link
{
 font-size: 20px;
 color: #242424;
 text-decoration: none;
 padding: 0 16px;
}

